--- a/package.json
+++ b/package.json
@@ -17,32 +17,32 @@
   },
   "dependencies": {
     "@tanstack/react-query": "5.65.1",
-    "expo": "52.0.28",
-    "expo-dev-client": "5.0.11",
-    "expo-status-bar": "2.0.1",
-    "react": "18.3.1",
-    "react-native": "0.76.6",
-    "react-native-safe-area-context": "4.12.0"
+    "expo": "53.0.9",
+    "expo-dev-client": "5.1.8",
+    "expo-status-bar": "2.2.3",
+    "react": "19.0.0",
+    "react-native": "0.79.2",
+    "react-native-safe-area-context": "5.4.0"
   },
   "devDependencies": {
     "@babel/core": "7.26.7",
     "@tanstack/eslint-plugin-query": "5.65.0",
-    "@testing-library/react-native": "13.0.1",
+    "@testing-library/react-native": "13.2.0",
     "@types/babel__core": "7.20.5",
     "@types/jest": "29.5.14",
     "@types/lodash": "4.17.15",
-    "@types/react": "18.3.12",
-    "@types/react-test-renderer": "18.3.1",
+    "@types/react": "19.1.6",
+    "@types/react-test-renderer": "19.0.0",
     "@typescript-eslint/eslint-plugin": "8.22.0",
     "eas-cli": "15.0.4",
     "eslint": "8.57.1",
     "eslint-config-expo": "8.0.1",
     "jest": "29.7.0",
-    "jest-expo": "52.0.3",
+    "jest-expo": "53.0.5",
     "lodash": "4.17.21",
     "msw": "2.7.3",
     "prettier": "3.2.5",
-    "react-test-renderer": "18.3.1",
+    "react-test-renderer": "19.0.0",
     "typescript": "5.7.3"
   },
   "private": true,
@@ -51,6 +51,8 @@
     "transformIgnorePatterns": [
       "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
     ],
-    "setupFilesAfterEnv": ["<rootDir>/setup-jest.ts"]
+    "setupFilesAfterEnv": [
+      "<rootDir>/setup-jest.ts"
+    ]
   }
 }
