--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jest-expo": "53.0.5",
     "lodash": "4.17.21",
     "msw": "2.8.5",
+    "patch-project": "0.2.11",
     "prettier": "3.5.3",
     "react-test-renderer": "19.0.0",
     "typescript": "5.8.3"
@@ -50,7 +51,7 @@
     "type": "modules",
     "jsSrcsDir": "specs",
     "android": {
-      "javaPackageName": "com.expoexperiments"
+      "javaPackageName": "uk.me.jeremygreen.expoexperiments"
     }
   },
   "jest": {
@@ -62,7 +63,9 @@
       "<rootDir>/setup-jest.ts"
     ],
     "testEnvironmentOptions": {
-      "customExportConditions": [""]
+      "customExportConditions": [
+        ""
+      ]
     }
   }
 }
