--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -204,15 +204,7 @@ jobs:
           path: |
             ~/.maestro/tests/
             ~/Library/Logs/maestro/
-          if-no-files-found: error
-
-      - name: simulator logs
-        uses: actions/upload-artifact@v4
-        if: success() || failure()    # run this step even if previous step failed
-        with:
-          name: simulator logs
-          path: |
             ios_simulator_logs.txt
             ~/Library/Logs/CoreSimulator/CoreSimulator.log
+            ~/Library/Logs/DiagnosticReports/
           if-no-files-found: error
-  
