--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -214,6 +214,10 @@ jobs:
         run: |
             shopt -s nullglob
             for f in ~/Library/Logs/DiagnosticReports/expoexperiments-*.ips ; do
-              printf "\n%s:\n" "${f}"
-              tail -n +2 "${f}" | jq -r '.lastExceptionBacktrace[].symbol'
+              {
+                printf "```\n"
+                printf "\n%s:\n" "${f}"
+                tail -n +2 "${f}" | jq -r '.lastExceptionBacktrace[].symbol'
+                printf "```\n"
+              } >> "${GITHUB_STEP_SUMMARY}"
             done
