Fix git-status composite action. Bad YAML, and need to specify shell.

--- a/.github/actions/git-status/action.yml
+++ b/.github/actions/git-status/action.yml
@@ -4,4 +4,5 @@ runs:
   using: "composite"
   steps:
     - name: "git status"
-    - run: test -z "$(git status --porcelain)"
+      shell: bash
+      run: test -z "$(git status --porcelain)"
