Update git-status composite action to log the git status if files changed/added/removed.

--- a/.github/actions/git-status/action.yml
+++ b/.github/actions/git-status/action.yml
@@ -5,4 +5,8 @@ runs:
   steps:
     - name: "git status"
       shell: bash
-      run: test -z "$(git status --porcelain)"
+      run: |
+        if [ -n "$(git status --porcelain)" ] ; then
+          git status
+          exit 1
+        fi
