Put apk and app into RUNNER_TEMP, to avoid some git status check failures.

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -111,6 +111,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: app-release.apk
+          path: ${{ runner.temp }}
 
       - name: enable KVM group perms
         run: |
@@ -212,6 +213,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: expoexperiments.app
+          path: ${{ runner.temp }}
 
       - name: install maestro
         run: scripts/install_maestro
