--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -198,6 +198,9 @@ jobs:
         path: ios/build/Build/Products/Release-iphonesimulator
         if-no-files-found: error
     
+    - name: ls -lR
+      run : ls -lR .
+
     # git-status must be last step
     - uses: ./.github/actions/git-status
 
