Put ios_simulator_logs.txt in RUNNER_TEMP.

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -232,7 +232,7 @@ jobs:
           path: |
             ~/.maestro/tests/
             ~/Library/Logs/maestro/
-            ios_simulator_logs.txt
+            ${{ runner.temp }}/ios_simulator_logs.txt
             ~/Library/Logs/CoreSimulator/CoreSimulator.log
             ~/Library/Logs/DiagnosticReports/
           if-no-files-found: error
