--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,5 +1,7 @@
 name: checks
 on: push
+env:
+  XCODE_VERSION: 16.4.0
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
 jobs:
@@ -162,6 +164,10 @@ jobs:
     steps:
     - uses: actions/checkout@v4.1.1
 
+    - uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: ${{ env.XCODE_VERSION }}
+
     - uses: actions/setup-node@v4.0.1
       with:
         node-version-file: '.node-version'
@@ -206,6 +212,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4.1.1
+
+      - uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: ${{ env.XCODE_VERSION }}
 
       - name: download app
         uses: actions/download-artifact@v4
