--- a/turbo_modules/fingerprint/android/build.gradle
+++ b/turbo_modules/fingerprint/android/build.gradle
@@ -75,6 +75,7 @@ dependencies {
   implementation "com.facebook.react:react-android"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
   testImplementation 'junit:junit:4.13.2'
+  testImplementation("io.mockk:mockk:1.14.5")
 }
 
 react {
