--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-dev-client": "5.2.4",
     "expo-status-bar": "2.2.3",
     "fingerprint": "file:./turbo_modules/fingerprint",
+    "patch-project": "0.3.1",
     "promise": "8.3.0",
     "react": "19.0.0",
     "react-native": "0.79.5",
